add landing doc

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -2,3 +2,39 @@
 title: ROPAgen Documentation
 description: Comprehensive documentation for ROPAgen, the AI-powered tool for generating Records of Processing Activities
 ---
+
+## What is a ROPA?
+
+A Record of Processing Activities (ROPA) is a comprehensive document required by data protection regulations such as the GDPR (General Data Protection Regulation). Think of it as a detailed inventory that maps out how your organization handles personal data from collection to deletion.
+
+The ROPA serves as a cornerstone of data protection compliance, providing transparency about your data processing activities and demonstrating accountability to both regulators and data subjects. It's not just a legal checkbox—it's a strategic tool that helps organizations understand and manage their data landscape effectively.
+
+## Where is ROPA Used and Its Impact
+
+### For Companies
+
+ROPA requirements apply to organizations operating within or serving customers in jurisdictions with strict data protection laws, particularly in the European Union under GDPR. However, similar requirements are emerging globally as privacy regulations evolve.
+
+For businesses, maintaining an accurate ROPA means more than regulatory compliance. It builds trust with customers, partners, and stakeholders by demonstrating a commitment to responsible data handling. Companies that proactively manage their ROPA often find it easier to respond to data subject requests, conduct privacy impact assessments, and identify potential security vulnerabilities.
+
+### For Users
+
+From a user perspective, the existence of a well-maintained ROPA provides assurance that their personal data is being handled with care and transparency. It means the organization knows what data they collect, why they collect it, and how they protect it—fundamental elements of privacy respect.
+
+## What is ROPAgen?
+
+ROPAgen is an intelligent automation platform specifically designed to streamline the creation and maintenance of Records of Processing Activities. Using advanced Large Language Model (LLM) technology, ROPAgen transforms the traditionally complex and time-consuming process of ROPA documentation into an intuitive, guided experience.
+
+The platform leverages AI to generate comprehensive ROPA documents through multiple approaches. Users can begin with industry-specific templates that provide a solid foundation, or utilize predefined categories that guide them through each essential component of a compliant ROPA. This flexibility ensures that both beginners and experienced privacy professionals can efficiently create documentation that meets their specific organizational needs.
+
+The platform helps organizations create comprehensive, compliant documentation without requiring deep regulatory expertise from every team member.
+
+## The Purpose of Automating ROPA Documents
+
+Creating a ROPA manually presents significant challenges, especially for organizations without dedicated privacy professionals. Many teams struggle with fundamental questions: What information should be included? How should processing activities be categorized? What level of detail is sufficient for compliance?
+
+ROPAgen addresses these pain points by providing intelligent guidance throughout the documentation process. The automation ensures that critical elements aren't overlooked while maintaining the flexibility to accommodate different organizational structures and processing activities.
+
+This approach is particularly valuable because ROPA creation isn't a one-time task—it requires ongoing maintenance as business processes evolve. ROPAgen's automation makes it practical for organizations to keep their documentation current without dedicating extensive resources to manual updates.
+
+By removing the complexity barrier, ROPAgen enables organizations to focus on what matters most: implementing strong data protection practices rather than struggling with documentation requirements.
