--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -23,7 +23,7 @@ From a user perspective, the existence of a well-maintained ROPA provides assura
 
 ## What is ROPAgen?
 
-ROPAgen is an intelligent automation platform specifically designed to streamline the creation and maintenance of Records of Processing Activities. Using advanced Large Language Model (LLM) technology, ROPAgen transforms the traditionally complex and time-consuming process of ROPA documentation into an intuitive, guided experience.
+ROPAgen is an intelligent automation platform specifically designed to streamline the creation of Records of Processing Activities. Using advanced Large Language Model (LLM) technology, ROPAgen transforms the traditionally complex and time-consuming process of ROPA documentation into an intuitive, guided experience.
 
 The platform leverages AI to generate comprehensive ROPA documents through multiple approaches. Users can begin with industry-specific templates that provide a solid foundation, or utilize predefined categories that guide them through each essential component of a compliant ROPA. This flexibility ensures that both beginners and experienced privacy professionals can efficiently create documentation that meets their specific organizational needs.
 
