--- a/src/content/docs/about.mdx
+++ b/src/content/docs/about.mdx
@@ -12,14 +12,10 @@ For academic inquiries or collaboration opportunities, please contact:
 
 ## Learning Modern Web Development Through Implementation
 
-ROPAgen represents **a complete learning journey through cutting-edge web development**, demonstrating how to build a production-ready application from absolute scratch. This project showcases the art of combining state-of-the-art technologies with creative UI/UX design to create something both functional and beautiful.
+ROPAgen represents **a complete learning journey through cutting-edge web development**, demonstrating how to build a production-ready application from scratch. This project showcases combining state-of-the-art technologies with creative UI/UX design to create something both functional and beautiful.
 
-Building ROPAgen was an exercise in **learning by implementing**. Every component, animation, and deployment pipeline was crafted from the ground up, providing deep insights into modern web development practices. The project demonstrates how theoretical knowledge transforms into practical skills through real-world application.
+The development process involved creating a custom UI component library with **Framer Motion animations** and **interactive spotlight cards**. The backend integrates **multiple AI providers** (OpenAI and Mistral) with **Next.js 15 server actions** for scalable, type-safe applications. The **automated ROPA documentation generation** streamlines compliance workflows by intelligently creating GDPR-compliant documents from user input.
 
-The frontend development process involved creating a custom UI component library with **Framer Motion animations** and **interactive spotlight cards** that respond to mouse movement. This wasn't just about implementing features—it was about understanding how modern web technologies can create genuinely engaging user experiences. The dark/light theme system and responsive design across all devices showcase how attention to detail in UI/UX design can elevate a functional application into something users actually enjoy using.
+The **automated deployment pipeline** transforms git commits into live production updates using **Docker**, **Traefik**, and **Watchtower**, demonstrating modern DevOps practices for continuous delivery.
 
-The backend architecture integrates **multiple AI providers** (OpenAI and Mistral) with **Next.js 15 server actions**, demonstrating how to build scalable, type-safe applications with **TypeScript**. The PDF generation system using **Puppeteer** and **Chromium** shows how complex document processing can be handled entirely in the browser environment.
-
-Perhaps most importantly, the **automated deployment pipeline** transforms simple git commits into live production updates. This infrastructure—built with **Docker**, **Traefik**, and **Watchtower**—demonstrates how modern DevOps practices enable continuous delivery without manual intervention.
-
-ROPAgen exemplifies how **creative exploration meets technical excellence**. The project treats web development as both an engineering discipline and a creative medium, showing how sophisticated animations, intuitive user interfaces, and robust backend systems can work together seamlessly. The entire codebase serves as a practical reference for implementing production-grade features: from internationalization with **next-intl** to complex form handling, from AI integration to PDF generation.
+ROPAgen exemplifies how **creative exploration meets technical excellence**, treating web development as both an engineering discipline and creative medium. The codebase serves as a practical reference for production-grade features: internationalization, AI integration, automated document generation, and PDF processing.
