--- a/src/content/docs/tech.mdx
+++ b/src/content/docs/tech.mdx
@@ -92,7 +92,7 @@ GitHub Actions orchestrates the entire deployment pipeline, which follows indust
 
 This automated pipeline ensures consistent deployments, rapid iteration cycles, and reliable production releases without manual intervention.
 
-![CI/CD Pipeline](/cicd.jpg)
+![CI/CD Pipeline](/public/cicd.jpg)
 
 
 ## Prompt Handling
@@ -102,4 +102,4 @@ This design enables flexible, source-specific prompt adaptation, allowing each p
 The prompt and code are designed so that potential hallucinations do not affect any other part of the ROPA generation process,but are limited only to the specific prompt where they occur.
 This modular approach enhances reliability and maintainability in the document generation workflow.
 
-![Prompt Handling](/promptgen.jpg)
+![Prompt Handling](/public/promptgen.jpg)
